# mailing_list_sending_service_2

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_initial.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
fixture/: groups.json
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
mailing/templates/mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  statistic.html
main/: urls.py  views.py
main/templates/main/: index.html
message/: admin.py  models.py  services.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_initial.py
message/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
templates/general/: base.html
templates/general/includes/: inc_footer.html  inc_header.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_form.html  user_form.html  user_list.html
