[tool.poetry]
name = "mailing-list-sending-service-2"
version = "0.1.0"
description = ""
authors = ["CHAPAPOPA <yackow.muliawin2015@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
pillow = "^10.3.0"
crispy-bootstrap5 = "^2024.2"
redis = "^5.0.7"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
